--- a/style.css
+++ b/style.css
@@ -12,8 +12,6 @@ body {
     background-size: auto;
     background-position: center, center;
     margin: 0;
-    padding-top: 15px;
-    overflow: hidden;
     flex-flow: column;
 }
 
@@ -37,7 +35,7 @@ body {
     background-color: #1313136b;
     margin: auto;
     border-radius: 15px;
-    /*! margin-bottom: 1%; */
+    backdrop-filter: blur(15px);
 }
 
 .table-flash-container {
@@ -49,26 +47,18 @@ body {
     background-color: #1313136b;
     margin: auto;
     border-radius: 15px;
-    /*! margin-bottom: 1%; */
-    /*! margin-top: 1%; */
     overflow: auto;
+    backdrop-filter: blur(15px);
 }
 
 @media screen and (max-width: 992px) {
-
-
     .file-upload-container {
-
         width: 80%;
-
     }
 
     .table-flash-container {
-
         width: 80%;
-
     }
-
 }
 
 
@@ -397,5 +387,6 @@ button:disabled {
 }
 
 .button.btnFlash:hover:enabled {
+    color: #ddd;
     background: green;
 }
