--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     height: 100%;
+    color: #ddd;
 }
 
 body {
@@ -26,13 +27,20 @@ body {
     font-size: larger;
 }
 
+
+.sub-headline {
+    color: rgba(255, 255, 255, 0.8);
+    font-size: larger;
+    text-shadow: -1px -1px 0 #5555552b, 1px -1px 0 #5555552b, -1px 1px 0 #5555552b, 1px 1px 0 #5555552b;
+}
+
 .file-upload-container {
     display: flex;
     flex-flow: column wrap;
     align-items: center;
     padding: 2em;
-    width: 35%;
-    height: 85%;
+   /* width: 95%;*/
+    height: 75%;
     color: #ddd;
     background-color: #1313136b;
     border-radius: 15px;
@@ -44,7 +52,7 @@ body {
     flex-flow: column;
     align-items: center;
     padding: 2em;
-    width: 30%;
+    width: 45%;
     background-color: #1313136b;
     margin: auto;
     border-radius: 15px;
@@ -366,7 +374,7 @@ button:disabled {
 #selected-file-name:hover  {
     border-color: #508C50;
     color: #91df91;
-    font-size: x-large;
+    transform: scale(1.3);
     white-space: nowrap;
 }
 
@@ -436,11 +444,11 @@ button:disabled {
 
 .mode-selection {
     display: flex;
-    flex-flow: row;
+    flex-flow: column;
     display: flex;
     align-items: center;
     padding: 2em;
-    width: 40%;
+    width: 45%;
     background-color: #1313132b;
     margin: auto;
     border-radius: 15px;
@@ -452,3 +460,42 @@ button:disabled {
         width: 80%;
     }
 }
+
+
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+  }
+  
+  /* Style the buttons inside the tab */
+  .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: #ccc;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: none;
+    width: 95%;
+    flex-flow: column;
+  }
