--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ body {
 .divider {
     display: flex;
     flex-flow: column;
-  
+
     height: 100%;
-    }
+}
 
 .headline {
     color: rgba(255, 255, 255, 0.8);
@@ -47,7 +47,7 @@ body {
     flex-flow: column wrap;
     align-items: center;
     padding: 2em;
-   /* width: 95%;*/
+    /* width: 95%;*/
     height: 75%;
     color: #ddd;
     background-color: #13131329;
@@ -379,7 +379,7 @@ button:disabled {
     transition: all 0.5s ease
 }
 
-#selected-file-name:hover  {
+#selected-file-name:hover {
     border-color: #508C50;
     color: #91df91;
     transform: scale(1.3);
@@ -414,9 +414,9 @@ button:disabled {
 .tooltip {
     position: relative;
     display: flex;
-  }
-  
-  .tooltip .tooltiptext {
+}
+
+.tooltip .tooltiptext {
     visibility: hidden;
     width: auto;
     background-color: rgb(99, 99, 99);
@@ -430,12 +430,12 @@ button:disabled {
     left: 50%;
     margin-left: -60px;
     opacity: 0;
-    transition:visibility 0.5s ease-out,opacity 0.5s ease-out;
+    transition: visibility 0.5s ease-out, opacity 0.5s ease-out;
     transition-delay: 1.5s;
     white-space: nowrap;
-  }
-  
-  .tooltip .tooltiptext::after {
+}
+
+.tooltip .tooltiptext::after {
     content: "";
     position: absolute;
     bottom: 100%;
@@ -443,12 +443,12 @@ button:disabled {
     border-width: 5px;
     border-style: solid;
     border-color: transparent transparent rgb(99, 99, 99) transparent;
-  }
-  
-  .tooltip:hover .tooltiptext {
+}
+
+.tooltip:hover .tooltiptext {
     visibility: visible;
     opacity: 1;
-  }
+}
 
 .mode-selection {
     display: flex;
@@ -456,13 +456,16 @@ button:disabled {
     display: flex;
     align-items: center;
     padding: 2em;
-    width: 45%;
+    width: 50%;
     background-color: #1313132b;
     margin: auto;
     border-radius: 15px;
     backdrop-filter: blur(15px);
     justify-content: space-around;
+    padding-top: 0px;
+    overflow: clip;
 }
+
 @media screen and (max-width: 992px) {
     .mode-selection {
         width: 80%;
@@ -473,12 +476,15 @@ button:disabled {
 /* Style the tab */
 .tab {
     overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
-  }
-  
-  /* Style the buttons inside the tab */
-  .tab button {
+    background-color: #6e6e6e0f;
+    width: 107%;
+    border-radius: 15px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
     background-color: inherit;
     float: left;
     border: none;
@@ -487,24 +493,27 @@ button:disabled {
     padding: 14px 16px;
     transition: 0.3s;
     font-size: 17px;
-  }
-  
-  /* Change background color of buttons on hover */
-  .tab button:hover {
-    background-color: #ddd;
-  }
-  
-  /* Create an active/current tablink class */
-  .tab button.active {
-    background-color: #ccc;
-  }
-  
-  /* Style the tab content */
-  .tabcontent {
+    width: 50%;
+    color: #ddd;
+    font-weight: bold;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    color: #ddd;
+    background-color: #f443369c;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #f44336;
+}
+
+/* Style the tab content */
+.tabcontent {
     display: none;
     padding: 6px 12px;
     border: none;
     width: 95%;
     flex-flow: column;
-  }
-
+}
