--- a/style.css
+++ b/style.css
@@ -38,20 +38,16 @@ body {
 .sub-headline {
     color: rgba(255, 255, 255, 0.8);
     font-size: larger;
-    text-shadow: -1px -1px 0 #5555552b, 1px -1px 0 #5555552b, -1px 1px 0 #5555552b, 1px 1px 0 #5555552b;
     text-align: center;
 }
 
 .file-upload-container {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column;
     align-items: center;
     padding: 2em;
-    /* width: 95%;*/
-    height: 75%;
     color: #ddd;
     background-color: #13131329;
-    border-radius: 15px;
     backdrop-filter: blur(15px);
 }
 
@@ -60,7 +56,7 @@ body {
     flex-flow: column;
     align-items: center;
     padding: 2em;
-    width: 45%;
+    width: 50%;
     background-color: #1313136b;
     margin: auto;
     border-radius: 15px;
@@ -456,13 +452,14 @@ button:disabled {
     display: flex;
     align-items: center;
     padding: 2em;
+    padding-bottom: 0;
+    padding-top: 0px;
     width: 50%;
     background-color: #1313132b;
     margin: auto;
     border-radius: 15px;
     backdrop-filter: blur(15px);
     justify-content: space-around;
-    padding-top: 0px;
     overflow: clip;
 }
 
@@ -512,8 +509,7 @@ button:disabled {
 /* Style the tab content */
 .tabcontent {
     display: none;
-    padding: 6px 12px;
     border: none;
-    width: 95%;
+    width: 107%;
     flex-flow: column;
 }
