--- a/style.css
+++ b/style.css
@@ -212,8 +212,8 @@ table.responsive {
     text-align: center;
     border-spacing: 0;
     border-radius: 3px;
-    width: 100%;
     height: 100%;
+    width: 75%;
 }
 
 table.responsive td,
@@ -424,15 +424,14 @@ button:disabled {
     color: #ddd;
     text-align: center;
     border-radius: 6px;
-    padding: 5px 0;
+    padding: 6px;
     position: absolute;
     z-index: 1;
-    top: 105%;
-    left: 50%;
-    margin-left: -60px;
+    top: 100%;
+    left: -50%;
     opacity: 0;
     transition: visibility 0.5s ease-out, opacity 0.5s ease-out;
-    transition-delay: 1.5s;
+    transition-delay: 0.5s;
     white-space: nowrap;
 }
 
@@ -440,10 +439,10 @@ button:disabled {
     content: "";
     position: absolute;
     bottom: 100%;
-    margin-left: -5px;
     border-width: 5px;
     border-style: solid;
     border-color: transparent transparent rgb(99, 99, 99) transparent;
+    left: 50%;
 }
 
 .tooltip:hover .tooltiptext {
