--- a/style.css
+++ b/style.css
@@ -56,12 +56,11 @@ body {
     display: flex;
     flex-flow: column;
     align-items: center;
-    padding: 2em;
     width: 50%;
     background-color: #1313136b;
     margin: auto;
     border-radius: 15px;
-    overflow: auto;
+    overflow: visible;
     backdrop-filter: blur(15px);
 }
 
@@ -206,23 +205,24 @@ input[type="submit"] .progress {
 }
 
 table.responsive {
-    border: thin solid rgba(42, 42, 42, 0.8);
-    background-color: rgba(82, 84, 81, 0.8);
     width: 400px;
     text-align: center;
     border-spacing: 0;
     border-radius: 3px;
     height: 100%;
-    width: 75%;
+    width: 100%;
 }
 
 table.responsive td,
 table.responsive th {
-    border: 1px solid rgba(36, 36, 36, 0.75);
+    border: 1px solid rgba(36, 36, 36, 0.36);
     padding: 12px 12px;
     border-spacing: 0;
     border-bottom-width: thick;
     color: #fff;
+    border-right: 0;
+    border-left: 0;
+    border-top: 0;
 }
 
 table.responsive tbody td {
@@ -230,14 +230,15 @@ table.responsive tbody td {
     font-weight: bold;
     color: #FFFFFF;
     border-bottom-width: thin;
+    border: 0;
 }
 
 table.responsive tr:nth-child(even) {
-    background-color: rgba(72, 72, 72, 0.8);
+    background-color: rgba(72, 72, 72, 0.52);
 }
 
 table.responsive tr:nth-child(odd) {
-    background-color: rgba(82, 84, 81, 0.8);
+    background-color: rgba(82, 84, 81, 0.61);
 }
 
 table.responsive thead {
@@ -415,6 +416,7 @@ button:disabled {
 .tooltip {
     position: relative;
     display: flex;
+    margin: 2%;
 }
 
 .tooltip .tooltiptext {
