--- a/style.css
+++ b/style.css
@@ -49,7 +49,12 @@ body {
     background-color: #13131329;
     backdrop-filter: blur(15px);
     padding: 0;
+    padding-bottom: 1em;
     width: 100%;
+    height: 100%;
+    justify-content: space-around;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .table-flash-container {
@@ -76,14 +81,19 @@ body {
 
 
 form {
-    margin: 2em 0;
+    display: flex;
+    justify-content: space-around;
+    height: 100%;
+    width: 50%;
 }
 
 .form-group {
-    position: relative;
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column;
     text-align: center;
+    width: 100%;
+    max-width: 100%;
+    justify-content: space-around;
 }
 
 #file {
@@ -99,7 +109,10 @@ form {
 
 label[for="file"] {
     display: inline-block;
-    padding: 1em 2em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    width: 50%;
+    align-self: center;
     background-color: #ddd;
     color: #333;
     border-radius: 5px;
@@ -120,9 +133,10 @@ input[type="submit"] .progress {
 
 .progress-btn {
     position: relative;
-    width: 100%;
+    width: 50%;
     height: 50px;
     display: inline-block;
+    align-self: center;
     border-radius: 5px;
     background: #f44336;
     font-family: "RobotoDraft", "Roboto", sans-serif;
@@ -281,7 +295,7 @@ table.responsive tfoot .links a {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin: 2%;
     cursor: pointer;
     display: inline-block;
     padding: 1em 2em;
@@ -365,25 +379,23 @@ button:disabled {
     scale: 145%;
 }
 
-#file-upload-container {
-    background-color: #f7f7f7;
-    padding: 20px;
-}
-
 #selected-file-name {
     margin-top: 10px;
     color: #ddd;
+    background-color: #FFF0;
     font-size: large;
     text-align: center;
     border: 2.5px solid grey;
     border-style: dashed;
     padding: 1.5em;
-    transition: all 0.5s ease
+    transition: all 0.5s ease;
+    align-self: center;
+    width: auto;
 }
 
 #selected-file-name:hover {
-    border-color: #508C50;
-    color: #91df91;
+    border-color: #af73af;
+    color: #6e206e;
     transform: scale(1.3);
     white-space: nowrap;
 }
@@ -459,11 +471,11 @@ button:disabled {
     align-items: center;
     padding: 0;
     width: 50%;
+    height: 50%;
     background-color: #1313132b;
     margin: auto;
     border-radius: 15px;
     backdrop-filter: blur(15px);
-    justify-content: space-around;
     overflow: clip;
 }
 
@@ -476,7 +488,6 @@ button:disabled {
 
 /* Style the tab */
 .tab {
-    overflow: hidden;
     background-color: #6e6e6e0f;
     width: 100%;
     border-radius: 15px;
@@ -523,9 +534,16 @@ button:disabled {
     display: none;
     border: none;
     width: 100%;
+    height: 100%;
     flex-flow: column;
 }
 
 .file-upload-container {
     width: 100%;
+}
+
+.select-fs {
+    width: 20%;
+    text-align: center;
+    font-size: medium;
 }
