--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
+html {
+    background-image: url("bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center, center;
+}
+
 html,
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     color: #ddd;
     height: 100%;
+    min-height: 100%;
 }
 
 body {
     display: flex;
-    background-image: url("bg.jpg");
-    background-repeat: no-repeat;
-    backdrop-filter: blur(5px);
-    background-size: cover;
-    background-position: center, center;
-    margin: 0;
     flex-flow: column;
+    backdrop-filter: blur(5px);
 }
 
 @media screen and (max-width: 992px) {
@@ -26,13 +29,13 @@ body {
 .divider {
     display: flex;
     flex-flow: column;
-
     height: 100%;
 }
 
 .headline {
     color: rgba(255, 255, 255, 0.8);
     font-size: larger;
+    text-align: center;
 }
 
 
@@ -118,7 +121,7 @@ label[for="file"] {
     color: #333;
     border-radius: 5px;
     cursor: pointer;
-    margin-bottom: 0.5em;
+    margin: 0.5em;
     transition: all 0.2s ease;
 }
 
@@ -324,7 +327,7 @@ button:disabled {
     margin: 4px 2px;
     cursor: not-allowed;
     display: inline-block;
-    padding: 1em 2em;
+    padding: 1em 0;
     background-color: #8b8b8b8c;
     color: #333;
     border-radius: 5px;
@@ -437,7 +440,6 @@ button:disabled {
 .tooltip {
     position: relative;
     display: flex;
-    margin: 2%;
     flex-flow: column;
     width: 100%;
     overflow: visible;
@@ -465,7 +467,7 @@ button:disabled {
 .tooltip .tooltiptext::after {
     content: "";
     position: relative;
-    bottom: 159%;
+    bottom: 158%;
     left: -50%;
     border-width: 5px;
     border-style: solid;
@@ -484,7 +486,6 @@ button:disabled {
     align-items: center;
     padding: 0;
     width: 50%;
-    height: 50%;
     background-color: #1313132b;
     margin: auto;
     border-radius: 15px;
@@ -495,10 +496,7 @@ button:disabled {
 @media screen and (max-width: 992px) {
     .mode-selection {
         width: 80%;
-        height: 50%;
     }
-
-
 }
 
 
@@ -583,10 +581,23 @@ button:disabled {
     }
 }
 
-@media screen and (max-height: 734px) {
-
-    html,
-    body {
+@media screen and (max-height: 710px) {
+    html {
         height: fit-content;
     }
+}
+
+/* blink effect after fs has been selected */
+@keyframes blinkingDiv{
+    0%		{filter: brightness(100%);}
+    25%		{filter: brightness(115%);}
+    50%		{filter: brightness(145%);}
+    75%		{filter: brightness(115%);}
+    100%	{filter: brightness(100%);}
+}
+
+.blinkDiv {
+    animation: blinkingDiv 0.35s 2;
+    animation-delay: 0.75s;
+    transition: all 0.2 ease;
 }
