--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center, center;
+    height: 100%;
 }
 
 html,
@@ -10,14 +11,13 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     color: #ddd;
-    height: 100%;
-    min-height: 100%;
 }
 
 body {
     display: flex;
     flex-flow: column;
     backdrop-filter: blur(5px);
+    height: inherit;
 }
 
 @media screen and (max-width: 992px) {
@@ -29,7 +29,7 @@ body {
 .divider {
     display: flex;
     flex-flow: column;
-    height: 100%;
+    height: inherit;
 }
 
 .headline {
@@ -609,12 +609,6 @@ button:disabled {
     }
 }
 
-@media screen and (max-height: 710px) {
-    html {
-        height: fit-content;
-    }
-}
-
 /* blink effect after fs has been selected */
 @keyframes blinkingDiv {
     0% {
@@ -647,4 +641,17 @@ button:disabled {
 .fsSelectDiv {
     height: 100%;
     padding-bottom: 6em;
+}
+
+@media screen and (max-width: 992px) {
+    html {
+        height: auto;
+    }
+}
+
+
+@media screen and (min-height: 778px) {
+    html {
+        height: 100vh;
+    }
 }
