--- a/style.css
+++ b/style.css
@@ -479,6 +479,7 @@ button:disabled {
     text-align: center;
     border-radius: 6px;
     padding: 6px;
+    padding-right: 0px;
     z-index: 1;
     top: 100%;
     left: -50%;
