--- a/style.css
+++ b/style.css
@@ -661,3 +661,23 @@ button:disabled {
 body.swal2-height-auto {
     height: 100vh !important;
 }
+
+.warning-dialogue-actions {
+    margin: 0 2em;
+}
+
+.order-1 {
+    order: 1;
+}
+
+.order-2 {
+    order: 2;
+}
+
+.order-3 {
+    order: 3;
+}
+
+.right-gap {
+    margin-right: auto;
+}
