--- a/style.css
+++ b/style.css
@@ -36,8 +36,12 @@ body {
     color: rgba(255, 255, 255, 0.8);
     font-size: larger;
     text-align: center;
+    margin-bottom: 0px;
 }
 
+#headline-table-selection {
+    margin-bottom: 2em;
+}
 
 .sub-headline {
     color: rgba(255, 255, 255, 0.8);
@@ -240,7 +244,7 @@ table.responsive {
 
 table.responsive td,
 table.responsive th {
-    border: 1px solid rgba(36, 36, 36, 0.36);
+    border: 1px solid rgba(46, 46, 50, 0.36);
     padding: 12px 12px;
     border-spacing: 0;
     border-bottom-width: thick;
@@ -259,11 +263,11 @@ table.responsive tbody td {
 }
 
 table.responsive tr:nth-child(even) {
-    background-color: rgba(72, 72, 72, 0.52);
+    background-color: rgba(71, 71, 75, 0.52);
 }
 
 table.responsive tr:nth-child(odd) {
-    background-color: rgba(82, 84, 81, 0.61);
+    background-color: rgba(81, 81, 84, 0.61);
 }
 
 table.responsive thead {
@@ -418,6 +422,7 @@ button:disabled {
 
 #selected-file-name {
     margin-top: 10px;
+    margin-bottom: 2em;
     color: #ddd;
     background-color: #FFF0;
     font-size: large;
@@ -427,7 +432,7 @@ button:disabled {
     padding: 1.5em;
     transition: all 0.5s ease;
     align-self: center;
-    width: auto;
+    border-radius: 10px;
 }
 
 #selected-file-name:hover {
@@ -529,7 +534,7 @@ button:disabled {
 
 /* Style the tab */
 .tab {
-    background-color: #6e6e6e0f;
+    background-color: #8f8f9ab0;
     width: 100%;
     border-radius: 15px;
     border-bottom-left-radius: 0;
@@ -688,19 +693,37 @@ body.swal2-height-auto {
     display: none;
 }
 
-.tgl, .tgl:after, .tgl:before, .tgl *, .tgl *:after, .tgl *:before, .tgl + .tgl-btn {
+.tgl,
+.tgl:after,
+.tgl:before,
+.tgl *,
+.tgl *:after,
+.tgl *:before,
+.tgl+.tgl-btn {
     box-sizing: border-box;
 }
 
-.tgl::-moz-selection, .tgl:after::-moz-selection, .tgl:before::-moz-selection, .tgl *::-moz-selection, .tgl *:after::-moz-selection, .tgl *:before::-moz-selection, .tgl + .tgl-btn::-moz-selection {
+.tgl::-moz-selection,
+.tgl:after::-moz-selection,
+.tgl:before::-moz-selection,
+.tgl *::-moz-selection,
+.tgl *:after::-moz-selection,
+.tgl *:before::-moz-selection,
+.tgl+.tgl-btn::-moz-selection {
     background: none;
 }
 
-.tgl::selection, .tgl:after::selection, .tgl:before::selection, .tgl *::selection, .tgl *:after::selection, .tgl *:before::selection, .tgl + .tgl-btn::selection {
+.tgl::selection,
+.tgl:after::selection,
+.tgl:before::selection,
+.tgl *::selection,
+.tgl *:after::selection,
+.tgl *:before::selection,
+.tgl+.tgl-btn::selection {
     background: none;
 }
 
-.tgl + .tgl-btn {
+.tgl+.tgl-btn {
     outline: 0;
     display: block;
     width: 4em;
@@ -711,11 +734,12 @@ body.swal2-height-auto {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    background: red;
+    background: #ff5050;
     border-radius: 15px;
 }
 
-.tgl + .tgl-btn:after, .tgl + .tgl-btn:before {
+.tgl+.tgl-btn:after,
+.tgl+.tgl-btn:before {
     position: relative;
     display: block;
     content: "";
@@ -723,47 +747,47 @@ body.swal2-height-auto {
     height: 100%;
 }
 
-.tgl + .tgl-btn:after {
+.tgl+.tgl-btn:after {
     left: 0;
 }
 
-.tgl + .tgl-btn:before {
+.tgl+.tgl-btn:before {
     display: none;
 }
 
-.tgl:checked + .tgl-btn:after {
+.tgl:checked+.tgl-btn:after {
     left: 50%;
 }
 
-.tgl-switch + .tgl-btn:after {
+.tgl-switch+.tgl-btn:after {
     border-radius: 2em;
     background: #fbfbfb;
     transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.3s ease, margin 0.3s ease;
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 4px 0 rgba(0, 0, 0, 0.08);
 }
 
-.tgl-switch + .tgl-btn:hover:after {
+.tgl-switch+.tgl-btn:hover:after {
     will-change: padding;
 }
 
-.tgl-switch + .tgl-btn:active {
+.tgl-switch+.tgl-btn:active {
     box-shadow: inset 0 0 0 2em #e8eae9;
 }
 
-.tgl-switch + .tgl-btn:active:after {
+.tgl-switch+.tgl-btn:active:after {
     padding-right: 0.8em;
 }
 
-.tgl-switch:checked + .tgl-btn {
-    background: #86d993;
+.tgl-switch:checked+.tgl-btn {
+    background: #5dff77;
     border-radius: 15px;
 }
 
-.tgl-switch:checked + .tgl-btn:active {
+.tgl-switch:checked+.tgl-btn:active {
     box-shadow: none;
 }
 
-.tgl-switch:checked + .tgl-btn:active:after {
+.tgl-switch:checked+.tgl-btn:active:after {
     margin-left: -0.8em;
 }
 
@@ -771,4 +795,25 @@ body.swal2-height-auto {
     display: flex;
     flex-flow: row;
     justify-content: center;
+}
+
+
+.gradient-background {
+    background: linear-gradient(180deg, #89898b75, #3f3d498f, #39393a7d);
+    background-size: 125% 185%;
+    animation: gradient-animation 27s cubic-bezier(.21, .26, .65, .91) infinite;
+}
+
+@keyframes gradient-animation {
+    0% {
+        background-position: 50% 0%;
+    }
+
+    50% {
+        background-position: 50% 100%;
+    }
+
+    100% {
+        background-position: 50% 0%;
+    }
 }
